--- a/src/App.scss
+++ b/src/App.scss
@@ -77,6 +77,14 @@ $navbar-brand-font-size: $h1-font-size;
   &:hover {
     box-shadow: $box-shadow-lg;
   }
+
+  .img-background {
+    background-position: center;
+    background-size: cover;
+    opacity: 25%;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .carousel {
